# VideoMaker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  nepali_video.toml  pyproject.toml  requirements-dev.txt  requirements.txt  videomaker.toml
audios/: Saas.m4a  Samadhanharu.m4a
prompts/: initial_prompt.txt
scripts/: convert-to-ct2.sh
src/nepali_narration_video.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nepali_video/: audio.py  cli.py  config.py  fonts.py  stt.py  utils.py  video.py
src/videomaker/: audio.py  cli.py  config.py  fonts.py  image_config.py  image_timings.py  mms.py  stt.py  utils.py  video.py
